# mpi-fundamentals

./: .gitignore  CMakeLists.txt  README.md
src/: hello_mpi.cpp  matmul.cpp  vector_sum.cpp
